--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.3",
     "next": "^14.1.0",
-    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-push-notification": "^1.5.4"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
